fix: file upload error to table (#104)